# C610-DriverWarn-demo2.0

./: README.docx  README.md
DriverWarn-demo2/: CMakeLists.txt  driver_warn_1.0.bb
DriverWarn-demo2/config/include/: param_ops.h
DriverWarn-demo2/config/src/: param.cpp
DriverWarn-demo2/include/: bufmanager.hpp  central_agency.h  data_pool.h  gstcamera.h  thread_pool.h
DriverWarn-demo2/include/gst/interfaces/: photography-enumtypes.h
DriverWarn-demo2/models/: attention_test.ipynb  landmark_contours.txt  sign_test.ipynb
DriverWarn-demo2/res/: ai_config.ini  gst_config.ini
DriverWarn-demo2/run_model/: CMakeLists.txt
DriverWarn-demo2/run_model/include/: ai_inference.h  result_process.h  result_process_imp.h
DriverWarn-demo2/run_model/src/: ai_inference.cpp
DriverWarn-demo2/src/: CMakeLists.txt  central_agency.cpp  gstcamera.cpp  thread_task.cpp  thread_task.h
DriverWarn-demo2/test/: gst_test.cpp  inference_test.cpp  test.cpp  thread_pool.h  thread_pool_test.cpp  thread_test
doc/: QCS610-DriverWarn-demo2-doc.docx  Video_description.txt
